--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+MyTheMovieDBAPIToken = "5ad3e7d8b17fb18b269aba2cb35dc80d"
 
